[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "M5Project"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
[project.scripts]
M5Project = "M5Project:compare_strings"  # call our function on startup